# spud_rs

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  spud_error.rs  spud_types.rs
src/functions/: add_value_len.rs  check_path.rs  generate_u8_id.rs  initialise_header.rs  mod.rs
src/functions/async/: generate_u8_id_async.rs  initialise_header_async.rs  mod.rs
src/functions/sync/: generate_u8_id_sync.rs  initialise_header_sync.rs  mod.rs
src/spud_builder/: builder.rs  mod.rs  object.rs  spud_add_number.rs  spud_type_ext.rs
src/spud_builder/async/: builder.rs  mod.rs  object.rs
src/spud_builder/serde/: mod.rs  spud_ser_errors.rs  spud_serializer.rs
src/spud_builder/sync/: builder.rs  mod.rs  object.rs
src/spud_decoder/: async_decoder.rs  decode_object.rs  decoder.rs  mod.rs  sync_decoder.rs
src/spud_decoder/async/: decode_object.rs  mod.rs
src/spud_decoder/decoder_functions/: array_start.rs  binary_blob.rs  bool.rs  date.rs  date_time.rs  decimal.rs  mod.rs  null.rs  number.rs  object_start.rs  string.rs  time.rs
src/spud_decoder/sync/: mod.rs
src/spud_schema/: mod.rs  spud_schema_types.rs
src/tests/: mod.rs  spud_schema.test.rs
src/types/: binary_blob.rs  date.rs  date_time.rs  mod.rs  object_id.rs  spud_string.rs  time.rs
