[package]
name = "spud"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", default-features = false, features = ["clock"] }
serde_json = "1.0.140"
getrandom = "0.3.3"
tracing = "0.1.41"
bs58 = "0.5.1"

tokio = { version = "1.45.0", features = [
    "rt-multi-thread",
    "fs",
    "io-util",
], optional = true }
serde = { version = "1.0.219", features = ["derive"], optional = true }

[dev-dependencies]
tempfile = "3.20.0"

[features]
default = []

hashmap = []
async = ["dep:tokio"]
serde = ["dep:serde"]
full = ["async", "serde", "hashmap"]
