[package]
edition = "2024"
authors = ["Loris Cuntreri <irertnuc.loris@gmail.com>"]
name = "spud_rs"
version = "0.2.0"
license = "AGPL-3.0-or-later"
repository = "https://github.com/MarelGuy/spud_rs"
readme = "README.md"
documentation = "https://docs.rs/spud-rs"
keywords = ["binary", "format", "parser", "spud"]
categories = ["parser-implementations", "filesystem"]
description = "A Rust library for parsing the SPUD binary format."

[dependencies]
chrono = { version = "0.4.41", default-features = false, features = ["clock"] }
indexmap = { version = "2.9.0", default-features = false, features = [
    "serde",
    "std",
] }

rust_decimal = { version = "1.37.2", default-features = false, features = [
    "std",
] }
serde_json = { version = "1.0.140", default-features = false, features = [
    "std",
] }
getrandom = { version = "0.3.3", default-features = false, features = ["std"] }
bs58 = { version = "0.5.1", default-features = false, features = ["std"] }

tokio = { version = "1.45.1", default-features = false, features = [
    "rt-multi-thread",
    "fs",
    "io-util",
], optional = true }
# serde = { version = "1.0.219", features = ["derive"], optional = true }

[dev-dependencies]
tempfile = "3.20.0"

[features]
default = []
async = ["dep:tokio"]
# serde = ["dep:serde"]
full = [
    "async",
    # "serde"
]
