[package]
edition = "2024"
authors = ["Loris Cuntreri <irertnuc.loris@gmail.com>"]
name = "spud_rs"
version = "0.7.0"
license = "AGPL-3.0-or-later"
repository = "https://github.com/MarelGuy/spud_rs"
readme = "README.md"
documentation = "https://docs.rs/spud-rs"
keywords = ["binary", "format", "parser", "spud"]
categories = ["parser-implementations", "filesystem"]
description = "A Rust library for parsing the SPUD binary format."

[dependencies]
chrono = { version = "0.4.41", default-features = false, features = ["clock"] }
indexmap = { version = "2.10.0", default-features = false, features = [
    "serde",
    "std",
] }

rust_decimal = { version = "1.37.2", default-features = false, features = [
    "std",
] }
serde_json = { version = "1.0.141", default-features = false, features = [
    "arbitrary_precision",
    "std",
] }
getrandom = { version = "0.3.3", default-features = false, features = ["std"] }
bs58 = { version = "0.5.1", default-features = false, features = ["std"] }

tokio = { version = "1.46.1", default-features = false, features = [
    "rt-multi-thread",
    "fs",
    "io-util",
    "sync",
], optional = true }

# serde = { version = "1.0.219", features = ["derive"], optional = true }

[dev-dependencies]
tokio = { version = "1.46.1", default-features = false, features = [
    "rt-multi-thread",
    "fs",
    "io-util",
    "sync",
    "macros",
    "test-util",
] }


[features]
default = []
async = ["dep:tokio"]
sync = []
# serde = ["dep:serde"]
full = [
    "async",
    "sync",
    # "serde"
]
